// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config array of numbers parses basic options 1`] = `
{
  "arr": [
    5,
    6,
  ],
  "defaultArr": [
    1,
    2,
  ],
  "overrides": [
    5,
    6,
  ],
}
`;

exports[`config array of strings parses basic options 1`] = `
{
  "arr": [
    "str1",
    "whitespace_around",
    "3",
  ],
  "defaultArr": [
    "d1",
    "d2",
  ],
}
`;

exports[`config boolean parses basic options 1`] = `
{
  "bool": true,
  "defaultBool": true,
  "namedBool": true,
  "od": false,
  "optionalBool": undefined,
}
`;

exports[`config enum fails if environment does not match the enum 1`] = `
EnvironmentInitializationFailed {
  "errors": [
    {
      "error": "Value of 'fail' (FAIL) should be one of [valid, ok]",
    },
  ],
}
`;

exports[`config enum parses with array definition 1`] = `
{
  "defaultEnum": "valid",
  "enum": "valid",
  "namedEnum": "valid",
  "od": "ok",
  "optionalEnum": undefined,
}
`;

exports[`config enum parses with enum definition 1`] = `
{
  "defaultEnum": "valid",
  "enum": "valid",
  "namedEnum": "valid",
  "od": "ok",
  "optionalEnum": undefined,
}
`;

exports[`config number Fails on invalid number 1`] = `
EnvironmentInitializationFailed {
  "errors": [
    {
      "error": "Value of 'num' (NUM) should be a number",
    },
  ],
}
`;

exports[`config number parses basic options 1`] = `
{
  "defaultNum": 3,
  "namedNum": 2,
  "num": 2,
  "od": 1,
  "optionalNum": undefined,
}
`;

exports[`config string parses basic options 1`] = `
{
  "defaultStr": "default",
  "namedStr": "str",
  "od": "overriden",
  "optionalStr": undefined,
  "str": "str",
}
`;
